--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,25 +1,24 @@
 .top-header {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     background-color: #F2F4F8;
     height: 38px;
     &__wrapper {
         display: flex;
-        flex-direction: row;
         justify-content: flex-end;
-        align-items: center;
     }
     &__menu {
         &_item {
             padding-right: 20px;
             text-decoration: none;
-            color: $main-text;
+            color: $heading-text;
             font-weight: 400;
             font-size: 14px;
             line-height: 17px;
             &:hover{
                 text-decoration: none;
-                color: $main-text;
+                color: $heading-text;
             }
         }
     }
@@ -30,8 +29,63 @@
             font-weight: 400;
             font-size: 14px;
             line-height: 17px;
-            color: $main-text;
+            color: $heading-text;
             cursor: pointer;
+            outline: none;
+            appearance: none;
+            background: url('../../icons/header/ic_arrow-down.svg') no-repeat right;
+            padding-right: 16px;
         }
     }
+}
+.main-header {
+    height: 90px;
+    background-color: #2457B8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__left {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__logo {
+        width: 254px;
+        margin-right: 60px;
+        img {
+            width: 100%;
+        }
+    }
+    &__menu {
+        display: flex;
+        align-items: center;
+        ul {
+            margin: 0;
+            display: flex;
+            justify-content: space-between;
+            text-decoration: none;
+            list-style-type: none;
+            gap: 50px;
+        }
+        &_item {
+            a {
+                color: #fff;
+                &:hover {
+                    color: #fff;
+                    text-decoration: none;
+                }
+            }
+        }
+        
+    }
+    &__buttons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 }
