--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -7,7 +7,7 @@
     font-size: 15px;
     border-radius: 4px;
     line-height: 20px;
-    color: #2457B8;
+    color: $main-color;
     &:hover, &:active, &:focus {
         outline: none;
     }
@@ -17,7 +17,7 @@
         margin-right: 10px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         color: #fff;
-        background: #2457B8;
+        background: $main-color;
     }
     &_arrow {
         width: 187px;
