add first product

--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -16,3 +16,10 @@
     color: #FFFFFF;
     margin: 0;
 }
+.title_fz46 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 56px;
+    color: #FFFFFF;
+}
