--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -43,4 +43,25 @@
             outline: none;
         }
     }
+    &_carousel {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        background: #FFFFFF;
+        border-radius: 4px;
+        border: none;
+        right: 50px;
+        bottom: 505px;
+        &:hover, &:active, &:focus {
+            outline: none;
+        }
+        &_prev {
+            opacity: 0.3;
+            left: 50px;
+            bottom: 505px;
+        }
+    }
 }
