--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -18,6 +18,13 @@
         color: $heading-text;
     }
 }
+.title_fz24 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #1E1E1E;
+}
 .title_fz20 {
     font-style: normal;
     font-weight: 400;
