--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -35,6 +35,10 @@
     &_black {
         color: rgba(0, 0, 0, 0.8);
     }
+    &_footer {
+        color: rgba(255, 255, 255, 0.6);
+        font-weight: 600;
+    }
 }
 .title_fz18 {
     font-style: normal;
