--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,7 @@
 @import 'libs/bootstrap-reboot.min';
+@import 'libs/slick';
 @import 'https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap';
+
 
 @import 'base/variables';
 @import 'base/mixins';
