--- a/src/sass/blocks/_first.scss
+++ b/src/sass/blocks/_first.scss
@@ -12,18 +12,8 @@
         width: 690px;
     }
     &__dots{
-        width: 68px;
-        display: flex;
-        justify-content: space-between;
+        width: 100%;
         margin-bottom: 30px;
-        span {
-        display: block;
-        width: 16px;
-        height: 16px;
-        border-radius: 100%;
-        background: #D9D9D9;
-        background: linear-gradient(270deg, #5080E9 0%, #CBDAF9 100%);
-        }
     }
     &__descr {
         font-style: normal;
