beginnig of our adaptation: add hamburger with bugs, header adaptetion

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -125,5 +125,7 @@
         justify-content: space-between;
         align-items: center;
     }
-
+    &__hamburger {
+        display: none;
+    }
 }
