--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -41,3 +41,6 @@ li {
 @import 'blocks/sixth';
 @import 'blocks/calc';
 @import 'blocks/footer';
+@import 'blocks/menu-adaptive';
+@import 'blocks/header_media';
+@import 'blocks/promo_media';
