--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -8,7 +8,10 @@
         align-items: center;
     }
     &__left {
-        min-width: 600px;
+        width: 600px;
+    }
+    &__title {
+        width: 100%;
     }
     &__right {
         width: 476px;
