--- a/src/sass/blocks/_first.scss
+++ b/src/sass/blocks/_first.scss
@@ -6,10 +6,10 @@
         gap: 160px;
     }
     &__left {
-        width: 384px;
+        max-width: 384px;
     }
     &__right {
-        width: 690px;
+        max-width: 690px;
     }
     &__dots{
         width: 100%;
