--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -7,10 +7,13 @@
     &__wrapper {
         display: flex;
         justify-content: flex-end;
+        gap: 20px;
     }
     &__menu {
+        display: flex;
+        align-items: center;
+        gap: 20px;
         &_item {
-            padding-right: 20px;
             text-decoration: none;
             color: $heading-text;
             font-weight: 400;
@@ -23,6 +26,7 @@
         }
     }
     &__language {
+        margin-top: -1px;
         &_select {
             border: none;
             background: #F2F4F8;
@@ -52,13 +56,7 @@
     &__left {
         display: flex;
         justify-content: space-between;
-    }
-    &__logo {
-        width: 254px;
-        margin-right: 60px;
-        img {
-            width: 100%;
-        }
+        gap: 60px;
     }
     &__menu {
         display: flex;
