--- a/src/sass/blocks/_header_media.scss
+++ b/src/sass/blocks/_header_media.scss
@@ -7,29 +7,28 @@
     .container {
         max-width: 960px;
     }
-    .main-header {
-        &__logo {
-            margin-right: 46px;
-        }
-        &__menu {
-            gap: 40px;
-        }
-    }
-}
-@media (max-width: 992px) {
-    .container {
-        width: 720px;
+    .main-header__wrapper {
+        gap: 30px;
     }
     .main-header {
         &__left {
             display: block;
         }
     }
+
+}
+@media (max-width: 992px) {
+    .container {
+        max-width: 720px;
+        margin: 0px auto;
+    }
+
 }
 @media (max-width: 768px) {
     .container {
-        width: 100%;
+        max-width: 100%;
         padding: 0 20px;
+        margin: 0px auto;
     }
     .main-header {
         &__menu {
@@ -64,7 +63,8 @@
 }
 @media (max-width: 576px) {
     .container {
-        width: 100%;
+        max-width: 100%;
+        margin: 0px auto;
         padding: 0 20px;
     }
     .top-header {
@@ -77,6 +77,7 @@
 @media (max-width: 428px) {
     .container {
         width: 100%;
+        margin: 0px auto;
         padding: 0 20px;
     }
     .main-header {
