--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -8,13 +8,13 @@
         align-items: center;
     }
     &__left {
-        width: 600px;
+        max-width: 600px;
     }
     &__title {
         width: 100%;
     }
     &__right {
-        width: 476px;
+        max-width: 476px;
         height: 223px;
         padding-top: 5px;
     }
