--- a/src/sass/blocks/_header_media.scss
+++ b/src/sass/blocks/_header_media.scss
@@ -15,20 +15,22 @@
             display: block;
         }
     }
-
 }
 @media (max-width: 992px) {
     .container {
         max-width: 720px;
-        margin: 0px auto;
     }
-
+    .main-header {
+        &__menu {
+            font-size: 14px;
+            margin-top: 3px;
+        }
+    }
 }
 @media (max-width: 768px) {
     .container {
         max-width: 100%;
         padding: 0 20px;
-        margin: 0px auto;
     }
     .main-header {
         &__menu {
@@ -64,7 +66,6 @@
 @media (max-width: 576px) {
     .container {
         max-width: 100%;
-        margin: 0px auto;
         padding: 0 20px;
     }
     .top-header {
@@ -76,11 +77,11 @@
 }
 @media (max-width: 428px) {
     .container {
-        width: 100%;
-        margin: 0px auto;
+        max-width: 100%;
         padding: 0 20px;
     }
     .main-header {
         height: 93px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     }
 }
