--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -15,10 +15,8 @@
     }
     &__right {
         max-width: 476px;
-        height: 223px;
-        padding-top: 5px;
     }
-    &__connect {
+    &__connect-link {
         margin-top: 30px;
         font-style: normal;
         font-weight: 400;
@@ -45,5 +43,11 @@
         img {
             display: block;
             width: 100%;     }
+    }
+    &__lines-tab {
+        display: none;
+    }
+    &__lines-mob {
+        display: none;
     }
 }
