--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,3 +44,4 @@ li {
 @import 'blocks/menu-adaptive';
 @import 'blocks/header_media';
 @import 'blocks/promo_media';
+@import 'blocks/first_media';
