--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -45,3 +45,4 @@ li {
 @import 'blocks/header_media';
 @import 'blocks/promo_media';
 @import 'blocks/first_media';
+@import 'blocks/products_media';
