--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,20 +1,22 @@
 .footer {
-    height: 700px;
+    min-height: 700px;
     padding: 100px 0 100px 0;
     background: linear-gradient(90deg, #0F2948 0%, #0F2948 100%);
     &__wrapper {
         display: grid;
-        grid-template-columns: repeat(3, 384px);
+        grid-template-columns: repeat(3, minmax(auto, 384px));
         column-gap: 24px;
         }
     &__contacts {
+        grid-column: 1;
+        grid-row: 1;
         width: 282px;
         height: 169px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         &_logo {
-            width: 100%;
+            max-width: 100%;
         }
         &_social {
             width: 234px;
@@ -36,11 +38,11 @@
         }
     }
     &__help {
-        margin-top: 44px;
+        grid-column: 1;
         &_text {
             margin-top: 20px;
-            width: 282px;
-            height: 256px;
+            max-width: 282px;
+            min-height: 256px;
             font-style: normal;
             font-weight: 400;
             font-size: 18px;
@@ -84,5 +86,13 @@
         &_title {
             margin-top: 50px;
         }
+    }
+    &__products {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    &__OCP {
+        grid-column: 3;
+        grid-row: 1;
     }
 }
