--- a/src/sass/blocks/_menu-adaptive.scss
+++ b/src/sass/blocks/_menu-adaptive.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 38px;
     left: -100%;
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     visibility: hidden;
     opacity: 0;
@@ -13,7 +13,7 @@
         visibility: visible;
     }
     &__block {
-        width: 100%;
+        max-width: 100%;
         height: 100vh;
         background: #FFFFFF;
     }
