--- a/src/sass/blocks/_sixth.scss
+++ b/src/sass/blocks/_sixth.scss
@@ -1,11 +1,14 @@
 .sixth {
-    height: 492px;
+    min-height: 492px;
     padding-bottom: 100px;
     background: linear-gradient(#FFFFFF 15.19%, #EAEFFF 92.59%);
     &__wrapper {
-        display: grid;
-        grid-template-columns: 282px 282px 384px;
-        column-gap: 126px;
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+    }
+    &__item {
+        max-width: 282px;
     }
     &__descr {
         margin-top: 20px;
@@ -17,8 +20,7 @@
     }
     &__ask {
         padding: 30px;
-        width: 342px;
-        height: 392px;
+        max-width: 342px;
         background: #5080E9;
         border-radius: 20px;
         &_descr {
