--- a/src/sass/blocks/_interface_media.scss
+++ b/src/sass/blocks/_interface_media.scss
@@ -1,25 +1,77 @@
+@media (max-width: 1400px) {
+    .container {
+        max-width: 1140px;
+    }
+    .carousel__wrapper {
+        max-width: 100%;
+    }
+}
 @media (max-width: 1300px) {
     .container {
         max-width: 1140px;
     }
+    .slick-slider {
+        max-width: 1000px;
+    }
+    .interface {
+        &__carousel {
+            margin-bottom: 0;
+            &_wrapper {
+                position: relative;
+                max-width: 1000px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+        }
+    }
+    
 }
-@media (max-width: 1200px) {
+@media (max-width: 1120px) {
     .container {
         max-width: 960px;
     }
     .interface {
         &__carousel {
-            &_slides {
-                img {
-                    width: 100%;
-                }
+            &_wrapper {
+                position: relative;
+                max-width: 820px;
+                left: 50%;
+                transform: translateX(-50%);
             }
+
         }
     }
 }
 @media (max-width: 992px) {
     .container {
         max-width: 720px;
+    }
+    .interface__carousel {
+        margin-bottom: 0;
+    }
+    .interface__text {
+        display: block;
+    }
+    .interface__descr {
+        margin-top: 50px;
+        max-width: 100%;
+    }
+}
+@media (max-width: 880px) {
+    .container {
+        max-width: 720px;
+    }
+    .interface {
+        &__carousel {
+            &_wrapper {
+                position: relative;
+                max-width: 600px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+        }
     }
 }
 @media (max-width: 768px) {
@@ -43,23 +95,83 @@
             margin-top: 30px;
         }
         &__carousel {
+            &_wrapper {
+            position: relative;
             margin-top: 60px;
             margin-bottom: 0;
+            max-width: 600px;
+            left: 50%;
+            transform: translateX(-50%);
+            
+            }
         }
-    }
-    .slick-list.draggable {
-        max-width: 600px;
-        margin: 0 auto;
     }
     .slick-prev {
         display: block;
-        left: 0;
         bottom: 50%;
+        left: 0px;
+        transform: translateX(+40%);
     }
     .slick-next {
         display: block;
-        right: 0;
         bottom: 50%;
+        right: 0px;
+        transform: translateX(-40%);
+    }
+    .slick-slider {
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 0 14px;
+    }
+}
+@media (max-width: 720px) {
+    .container {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+    .interface {
+        &__carousel {
+            &_wrapper {
+                position: relative;
+                max-width: 550px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+        }
+    }
+}
+@media (max-width: 670px) {
+    .container {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+    .interface {
+        &__carousel {
+            &_wrapper {
+                position: relative;
+                max-width: 500px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+        }
+    }
+}
+@media (max-width: 620px) {
+    .container {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+    .interface {
+        padding: 50px 0 60px 0;
+        &__carousel {
+            &_wrapper {
+                position: relative;
+                max-width: 100%;
+            }
+
+        }
     }
 }
 @media (max-width: 576px) {
@@ -67,10 +179,52 @@
         max-width: 100%;
         padding: 0 20px;
     }
+    .interface {
+        &__title {
+            font-size: 40px;
+            line-height: 48px;
+        }
+    }
+
 }
 @media (max-width: 428px) {
     .container {
         max-width: 100%;
         padding: 0 20px;
+        display: flex;
+        flex-direction: column;
     }
+    .interface {
+        position: relative;
+        &__title {
+            font-size: 24px;
+            line-height: 32px;
+        }
+        &__text {
+            min-height: auto;
+        }
+        &__descr {
+            display: none;
+            &_one {
+                margin-bottom: 20px;
+            }
+        }
+        &__carousel {
+            &_wrapper {
+                margin-top: 20px;
+                order: 0;
+            }
+        }
+        &__descr_hidden {
+            display: block;
+            order: 1;
+        }
+        &__descr_one {
+            margin-top: 20px;
+        }
+    }
+    .slick-slider {
+        padding: 0;
+    }
+
 }
