--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -46,6 +46,7 @@ li {
 @import 'blocks/promo_media';
 @import 'blocks/first_media';
 @import 'blocks/products_media';
+@import 'blocks/interface_media';
 @import 'blocks/document_media';
 @import 'blocks/sixth_media';
 @import 'blocks/calc_media';
