--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -58,7 +58,7 @@
         justify-content: space-between;
         gap: 60px;
     }
-    &__menu {
+    /*&__menu {
         display: flex;
         align-items: center;
         margin: 0;
@@ -117,7 +117,100 @@
             }
         }
         
+    }*/
+
+    &__menu {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-decoration: none;
+        list-style-type: none;
+        gap: 50px;
+        &_button {
+            display: flex;
+            position: relative;
+            background-color: transparent;
+            border: none;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+            color: #FFFFFF;
+            &:active, &:hover, &:focus {
+                outline: none;
+            }  
+            a {
+                display: block;
+                color: #fff;
+                &:hover {
+                    color: #fff;
+                    text-decoration: none;
+                }
+            }
+            &-drop {
+                position: relative;
+                padding-right: 16px;
+                &:after {
+                    content: '';
+                    display: block;
+                    width: 16px;
+                    height: 16px;
+                    opacity: 0.5;
+                    top: 1px;
+                    right: -1px;
+                    position: absolute;
+                    background: url('../icons/arrows/Color=White\,\ State=Default.svg'); 
+                }
+            }
+        }
+    
+        
     }
+    &__dropdown {
+        display: none;
+        position: absolute;
+        margin-top: 4px;
+        padding: 0;
+        list-style-type: none;
+        background: #F7F7F7;
+        border-radius: 4px;
+        padding: 10px 15px;
+        &_item {
+            margin-top: 5px;
+        }
+        &_link {
+            color: $main-color;
+            text-decoration: none;
+            width: 100%;
+            display: block;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+            &:hover {
+                color: #fff;
+                text-decoration: none;
+                background-color: $main-color;
+                width: 100%;
+            }
+            &:active {
+                background-color:rgba(255, 255, 255, .7);
+                transition: all 0.2s;
+            }
+        }
+    }
+    .main-header__menu_item.main-header__menu_item-open .main-header__dropdown {
+        display: block;
+    }
+    .main-header__menu_item.main-header__menu_item-open .main-header__menu_button-drop:after {
+        transform: rotate(-180deg);
+        transition: all 0.6s;
+        opacity: 1.0;
+    }
+    
     &__buttons {
         display: flex;
         justify-content: space-between;
