--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -2,14 +2,19 @@
     width: 136px;
     height: 40px;
     background: #FFFFFF;
-    border: none;
+    border: 1px solid rgba(255, 255, 255, 0.3);
     font-weight: 400;
     font-size: 15px;
     border-radius: 4px;
     line-height: 20px;
     color: $main-color;
-    &:hover, &:active, &:focus {
-        outline: none;
+    &:hover { 
+        background: $main-color;
+        color:#FFFFFF;
+        transition: all 0.6s;
+    }
+    &:focus {
+        border: 1px solid rgba(255, 255, 255, 0.7);
     }
     &_blue {
         width: 63px;
@@ -18,6 +23,19 @@
         border: 1px solid rgba(255, 255, 255, 0.3);
         color: #fff;
         background: $main-color;
+        &:visited {
+            outline:none;
+            border: none;
+        }
+        &:hover {
+            transition: all .6s;
+            background: #FFFFFF;
+            color: $main-color;
+            border: 1px solid $main-color;
+            outline: none;
+        }
+
+
     }
     &_arrow {
         width: 187px;
@@ -39,8 +57,11 @@
         line-height: 20px;
         color: #4671F6;
         border: none;
-        &:hover, &:active, &:focus {
-            outline: none;
+        &:hover {
+            background: #4671F6;
+            color: #E0E7FC;
+            border: 1px solid #fff;
+            transition: all .6s;
         }
     }
 }
