--- a/src/sass/blocks/footer/_footer.scss
+++ b/src/sass/blocks/footer/_footer.scss
@@ -26,6 +26,10 @@
             a {
                 &:hover {
                     text-decoration: none;
+                    img {
+                        transform: scale(1.2);
+                        transition: all .6s;
+                    }
                 }
             }
         }
@@ -75,7 +79,7 @@
                     text-decoration: none;
                     &:hover {
                     color: #FFFFFF;
-                    text-decoration: none;
+                    text-decoration: underline;
                     }
                 }
             }
