--- a/src/sass/blocks/sixth/_sixth_media.scss
+++ b/src/sass/blocks/sixth/_sixth_media.scss
@@ -40,6 +40,7 @@
         padding: 0 20px;
     }
     .sixth {
+        background: linear-gradient(#FFFFFF 15.19%, #EAEFFF 92.59%);
         padding-bottom: 60px;
         &__title {
             font-weight: 600;
@@ -66,7 +67,7 @@
             &_btn {
                 width: 163px;
                 height: 44px;
-                font-size: 16px;
+                font-size: 15px;
                 line-height: 20px;
             }
         }
