--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,24 +30,25 @@ li {
     margin: 0 auto;
 }
 
-@import 'blocks/header';
+
+@import 'blocks/header/header';
 @import 'blocks/button';
-@import 'blocks/promo';
+@import 'blocks/promo/promo';
 @import 'blocks/title';
-@import 'blocks/first';
-@import 'blocks/products';
-@import 'blocks/interface';
-@import 'blocks/document';
-@import 'blocks/sixth';
-@import 'blocks/calc';
-@import 'blocks/footer';
+@import 'blocks/first/first';
+@import 'blocks/products/products';
+@import 'blocks/interface_block/interface';
+@import 'blocks/document/document';
+@import 'blocks/sixth/sixth';
+@import 'blocks/calc/calc';
+@import 'blocks/footer/footer';
 @import 'blocks/menu-adaptive';
-@import 'blocks/header_media';
-@import 'blocks/promo_media';
-@import 'blocks/first_media';
-@import 'blocks/products_media';
-@import 'blocks/interface_media';
-@import 'blocks/document_media';
-@import 'blocks/sixth_media';
-@import 'blocks/calc_media';
-@import 'blocks/footer_media';
+@import 'blocks/header/header_media';
+@import 'blocks/promo/promo_media';
+@import 'blocks/first/first_media';
+@import 'blocks/products/products_media';
+@import 'blocks/interface_block/interface_media';
+@import 'blocks/document/document_media';
+@import 'blocks/sixth/sixth_media';
+@import 'blocks/calc/calc_media';
+@import 'blocks/footer/footer_media';
