--- a/src/sass/blocks/header/_header_media.scss
+++ b/src/sass/blocks/header/_header_media.scss
@@ -64,6 +64,11 @@
             span.tablet {
                 width: 13px;
             }
+            &-black {
+                span {
+                    background: #000;
+                }
+            }
         }
     }
     .menu-adaptive {
