--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -42,6 +42,7 @@ li {
 @import 'blocks/sixth/sixth';
 @import 'blocks/calc/calc';
 @import 'blocks/footer/footer';
+@import 'blocks/prices';
 @import 'blocks/menu-adaptive';
 @import 'blocks/header/header_media';
 @import 'blocks/promo/promo_media';
