--- a/src/sass/blocks/_menu-adaptive.scss
+++ b/src/sass/blocks/_menu-adaptive.scss
@@ -11,6 +11,7 @@
         left: 0;
         opacity: 1;
         visibility: visible;
+        z-index: 99;
     }
     &__block {
         max-width: 100%;
