first section cloud instances

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -43,6 +43,7 @@ li {
 @import 'blocks/calc/calc';
 @import 'blocks/footer/footer';
 @import 'blocks/prices';
+@import 'blocks/table';
 @import 'blocks/menu-adaptive';
 @import 'blocks/header/header_media';
 @import 'blocks/promo/promo_media';
