--- a/src/sass/blocks/_prices.scss
+++ b/src/sass/blocks/_prices.scss
@@ -106,6 +106,7 @@
 .cloud {
     padding: 100px 0 80px 0;
     min-height: 835px;
+    position: relative;
     &__bills {
         width: 287px;
         height: 116px;
@@ -143,6 +144,13 @@
                 background: darken(#4671F6, 10%);
             }
         }
+    }
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__right {
+        max-width: 792px;
     }
 }
 .categories {
