--- a/src/sass/blocks/_table.scss
+++ b/src/sass/blocks/_table.scss
@@ -1,4 +1,8 @@
 .table-item {
+    @media(max-width: 428px) {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
     &__header {
         display: flex;
         align-items: start;
@@ -10,9 +14,50 @@
         font-size: 18px;
         line-height: 22px;
         color: rgba(30, 30, 30, 0.5);
+        @media (max-width: 428px) {
+            font-size: 16px;
+            line-height: 19px;
+        }
+    }
+    &__title {
+        font-weight: 600;
+        font-size: 46px;
+        line-height: 56px;
+        color: $heading-text;
+        @media (max-width: 576px) {
+            font-size: 32px;
+            line-height: 40px;
+        }
+        @media (max-width: 428px) {
+            font-size: 24px;
+            line-height: 32px;
+        }
     }
     &__descr {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 26px;
         margin-top: 20px;
+        color: $heading-text;
+        @media(max-width: 992px) {
+            font-size: 18px;
+            line-height: 26px;
+        }
+        @media (max-width: 428px) {
+            font-size: 16px;
+            line-height: 24px;
+        }
+    }
+    &__icon {
+        @media (max-width: 428px) {
+            display: none;
+        }
+        &-mob {
+            display: none;
+            @media (max-width: 428px){
+                display: block;
+            }
+        }
     }
 
     &__table {
