--- a/src/sass/blocks/footer/_footer.scss
+++ b/src/sass/blocks/footer/_footer.scss
@@ -17,6 +17,9 @@
         justify-content: space-between;
         &_logo {
             max-width: 100%;
+            &-mob {
+                display: none;
+            }
         }
         &_social {
             width: 234px;
