--- a/src/sass/blocks/header/_header_media.scss
+++ b/src/sass/blocks/header/_header_media.scss
@@ -70,6 +70,12 @@
                 }
             }
         }
+        &__logo {
+            display: none;
+            &-mob {
+                display: block;
+            }
+        }
     }
     .menu-adaptive {
         z-index: 3;
