--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,6 +44,7 @@ li {
 @import 'blocks/footer/footer';
 @import 'blocks/prices';
 @import 'blocks/table';
+@import 'blocks/cloud_instance';
 @import 'blocks/menu-adaptive';
 @import 'blocks/header/header_media';
 @import 'blocks/promo/promo_media';
