--- a/src/sass/blocks/_cloud_instance.scss
+++ b/src/sass/blocks/_cloud_instance.scss
@@ -43,5 +43,216 @@
             }
         }
     }
-    
+    &__menu {
+        @media(max-width: 768px) {
+            display: none;
+        }
+        @media(max-width: 576px) {
+            display: block;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+    }
+    &__tabs {
+        display: flex;
+        gap: 30px;
+        list-style-type: none;
+    }
+    &__tab {
+        padding: 10px 0;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        color: $heading-text;
+        cursor: pointer;
+        &:hover {
+            color: $link-color;
+        }
+        &_active {
+            color: $link-color;
+            border-bottom: 2px solid $link-color;
+        }
+        @media (max-width: 428px) {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+        }
+    }
+    &__first {
+        padding: 100px 0;
+        min-height: 340px;
+        display: flex;
+        gap: 24px;
+        @media(max-width: 768px) {
+            padding: 50px 0;
+            min-height: 352px;
+        }
+        @media (max-width: 576px) {
+            min-height: auto;
+        }
+    }
+    &__left {
+        width: 394px;
+        display: flex;
+        flex-direction: column;
+        @media (max-width: 576px) {
+            display: none;
+        }
+        &-hidden {
+            display: none;
+            @media (max-width: 576px) {
+                padding: 50px 20px;
+                background: #F2F4F8;
+                display: flex;
+                justify-content: space-between;
+                gap: 30px;
+            }
+        }
+    } 
+    &__dots {
+        @media (max-width: 576px) {
+            max-width: 179px;
+        }
+    }
+    &__dots-descr {
+        margin-top: 30px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 28px;
+        color: $heading-text;
+        @media (max-width: 576px) {
+            max-width: 179px;
+        }
+    }
+    &__right {
+        max-width: 690px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 28px;
+        color: $heading-text;
+        @media(max-width: 768px) {
+            max-width: 320px;
+        }
+        @media (max-width: 576px){
+            max-width: 100%;
+            font-size: 18px;
+            line-height: 26px;
+        }
+        @media (max-width: 428px) {
+            max-width: 100%;
+            font-size: 16px;
+            line-height: 24px;
+        }
+    }  
+    &__second {
+        background: linear-gradient(90deg, #F2F4F8 0%, #FCFDFF 100%);
+        padding: 100px 0;
+        @media(max-width: 768px) {
+            padding: 50px 0;
+        }
+    } 
+    &__items {
+        display: flex;
+        gap: 126px;
+        @media (max-width: 992px) {
+            gap: 50px;
+        }
+        @media (max-width: 768px) {
+            gap: 40px;
+            flex-direction: column;
+        }
+        @media (max-width: 428px) {
+            justify-content: space-between;
+        }
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
+        max-width: 282px;
+        @media (max-width: 768px) {
+            flex-direction: row;
+            max-width: 100%;
+        }
+        @media (max-width: 428px) {
+            gap: 14px;
+        }
+        &_title {
+            @media (max-width: 428px){
+                font-size: 16px;
+                line-height: 24px;
+                color: rgba(0, 0, 0, 0.8);
+            }
+        }
+        &_descr {
+            margin-top: 20px;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 26px;
+            color: $heading-text;
+            @media (max-width: 428px){
+                margin-top: 2px;
+                font-size: 16px;
+                line-height: 24px;
+                color: rgba(0, 0, 0, 0.8);
+            }
+        }
+    }
+    &__prices {
+        padding: 80px 0 100px 0;
+        @media (max-width: 768px) {
+            padding: 50px 0;
+        }
+        @media (max-width: 428px) {
+            padding: 50px 0 60px 0;
+        }
+        &_left {
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            max-width: 384px;
+            @media (max-width: 1200px) {
+                display: none;
+            }
+        }
+        &_right {
+            max-width: 792px;
+            @media (max-width: 1200px) {
+                max-width: 100%;
+            }
+        }
+        &_wrapper {
+            margin-top: 40px;
+            display: flex;
+            justify-content: space-between;
+            @media (max-width: 768px) {
+                margin-top: 30px;
+            }
+        }
+        &_table-item {
+            margin: 0;
+        }
+    }
+
+}
+.categories {
+    &-cloud {
+        position: static;
+    }
+    &__list {
+        &-cloud {
+            margin: 0;
+            li a {
+                color: $link-color;
+            }
+        }
+    }
+}
+.divider {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: rgba(0, 0, 0, 0.2);
 }
